--- a/config/locales/account/es.yml
+++ b/config/locales/account/es.yml
@@ -21,6 +21,7 @@ es:
         instructions: NOT TRANSLATED YET
         reactivate_button: NOT TRANSLATED YET
         success: NOT TRANSLATED YET
+        with_phone_button: NOT TRANSLATED YET
     items:
       personal_key: NOT TRANSLATED YET
     links:
