Updates styles for usps confirmation
**Why**: To better match our designs.

Add verify/completion controller, route, view+test

**Why**: To Let the user know their account was verified and activated
successfully, and to provide a simple mechanism for the user to return
to the service provider

Removes uneeded duplicate controller

**Why**: Made changes to `completions_controller` to
accomodate either loa3 or loa1 signups

Remove vestigal test code, undeed route logic

**Why**: USPS test now ends once user has gotten to the completion
page, and no longer attempts to click the 'continue to partner agency'
link. Route logic was out of scope and is handled in another pr

Move usps spec to features/saml

**Why**: It doesn't stub out the session and is more of an integration
test

Rebase with master, extend loa3 signup feature

**Why**: Get up-to-date with new code, make loa3 feature spec more
complete (follow user all the way from signup to their profile)

Remove links to pages being reworked/created

**Why**: They don't go anywhere yet

--- a/config/locales/errors/es.yml
+++ b/config/locales/errors/es.yml
@@ -10,6 +10,7 @@ es:
     messages:
       already_confirmed: Ya está confirmado, por favor intenta iniciar sesión.
       blank: Por favor, rellenar este campo.
+      confirmation_code_incorrect: NOT TRANSLATED YET
       confirmation_invalid_token:
         El enlace de confirmación en el que ha hecho clic ya no es válido. Esto puede haber
         sido causado al hacer clic en un enlace antiguo de su correo electrónico, o puede ser que ya haya
