--- a/config/locales/forms/en.yml
+++ b/config/locales/forms/en.yml
@@ -44,6 +44,7 @@ en:
       personal_key: Personal key
       try_again: Use another phone number
     verify_profile:
-      title: Verify your identity
-      submit: Submit
-      instructions: Enter your secret code
+      name: Confirmation code
+      instructions: Enter the ten-character code in the letter we sent you.
+      submit: Confirm account
+      title: Confirm your account
