--- a/config/locales/forms/es.yml
+++ b/config/locales/forms/es.yml
@@ -43,6 +43,7 @@ es:
       personal_key: Código de recuperación
       try_again: Inténtalo de nuevo
     verify_profile:
+      name: NOT TRANSLATED YET
       title: NOT TRANSLATED YET
       submit: NOT TRANSLATED YET
       instructions: NOT TRANSLATED YET
