--- a/config/locales/instructions/en.yml
+++ b/config/locales/instructions/en.yml
@@ -3,9 +3,11 @@ en:
   instructions:
     2fa:
       authenticator:
+        accordion_header: Scan code with your mobile device
         confirm_code_html: Enter the code from your authenticator app. If you have several accounts
           set up in your app, enter the code corresponding to %{email} at
           %{app}.%{tooltip}
+        or: or
       sms:
         confirm_code_html: We sent it in a text message to %{number}. Need another code?
           %{resend_code_link}. Message rates may apply.
