--- a/config/locales/titles/en.yml
+++ b/config/locales/titles/en.yml
@@ -24,8 +24,7 @@ en:
       new: Sign up for a account
       start: Get started
     totp_setup:
-      new: Enter the secure one-time security code
-      start: Set up two-factor authentication
+      new: Set up two-factor authentication
     two_factor_setup: Two-factor authentication setup
     verify_email: Check your email
     verify_profile: Activate your account
