--- a/config/locales/idv/es.yml
+++ b/config/locales/idv/es.yml
@@ -96,6 +96,7 @@ es:
       hardfail: NOT TRANSLATED YET
       hardfail4: NOT TRANSLATED YET
       help_center: NOT TRANSLATED YET
+      mail_sent: NOT TRANSLATED YET
       phone:
         alert: NOT TRANSLATED YET
         in_your_name: NOT TRANSLATED YET
