Add OpenID logout URL
**Why**:
Support RP-initiated logouts and implement this part of the spec:
https://openid.net/specs/openid-connect-session-1_0.html#RPLogout

--- a/config/locales/openid_connect/en.yml
+++ b/config/locales/openid_connect/en.yml
@@ -21,3 +21,6 @@ en:
         no_authorization: No Authorization header provided
         malformed_authorization: Malformed Authorization header
         not_found: Could not find authorization for the contents of the provided access_token or it may have expired
+    logout:
+      errors:
+        id_token_hint: id_token_hint was not recognized
