--- a/config/locales/help_text/en.yml
+++ b/config/locales/help_text/en.yml
@@ -4,3 +4,13 @@ en:
     change_factor: >
       Before you're able to edit your %{factor}, you will need to confirm your
       password and receive a security code on your phone.
+    requested_attributes:
+      intro: This is the only information %{app_name} will share with %{sp}
+      address: Mailing address
+      birthdate: Date of birth
+      email: Email address
+      family_name: Last name
+      given_name: First name
+      name: Full name
+      phone: Phone number
+      social_security_number: Social Security number
