Add styles to shared attributes page

--- a/config/locales/help_text/es.yml
+++ b/config/locales/help_text/es.yml
@@ -4,7 +4,7 @@ es:
     change_factor: >
       NOT TRANSLATED YET
     requested_attributes:
-      intro: NOT TRANSLATED YET
+      intro_html: NOT TRANSLATED YET
       address: NOT TRANSLATED YET
       birthdate: NOT TRANSLATED YET
       email: NOT TRANSLATED YET
