--- a/config/locales/help_text/en.yml
+++ b/config/locales/help_text/en.yml
@@ -5,7 +5,7 @@ en:
       Before you're able to edit your %{factor}, you will need to confirm your
       password and receive a security code on your phone.
     requested_attributes:
-      intro: This is the only information %{app_name} will share with %{sp}
+      intro_html: This is the only information %{app_name} will share with %{sp}
       address: Mailing address
       birthdate: Date of birth
       email: Email address
