--- a/config/locales/event_types/en.yml
+++ b/config/locales/event_types/en.yml
@@ -10,3 +10,4 @@ en:
     phone_changed: Phone number changed
     phone_confirmed: Phone confirmed
     eastern_timestamp: '%{timestamp} (Eastern)'
+    usps_mail_sent: Letter sent
