--- a/config/locales/links/es.yml
+++ b/config/locales/links/es.yml
@@ -1,7 +1,7 @@
 ---
 es:
   links:
-    back_to_sp: "‹ Volver a %{sp}"
+    back_to_sp: "Volver a %{sp}"
     contact: Contactar
     copy: NOT TRANSLATED YET
     create_account: Crear cuenta
