--- a/config/locales/mailer/en.yml
+++ b/config/locales/mailer/en.yml
@@ -4,7 +4,7 @@ en:
     about: About %{app}
     confirmation_instructions:
       first_sentence:
-        confirmed: > It looks like you want to change your email address.
+        confirmed: > Trying to change your email address?
         reset_requested: >
           Your %{app} account has been reset by a tech support representative.
           To continue, you must confirm your email address.
@@ -16,16 +16,16 @@ en:
     email_change_notice:
       subject: Change your email address
     email_reuse_notice:
-      subject: This email address is associated with an account already. 
+      subject: This email address is already associated with an account. 
     help: >
-      For more help, please visit %{link}.
+      For more help, visit %{link}.
     no_reply: Please do not reply to this message.
     privacy_policy: Privacy policy
     reset_password:
       footer: >
         This link expires in %{expires} hours.
       header: >
-        To finish resetting your password, please click on the link below 
+        To finish resetting your password, please click the link below 
         or copy and paste the entire link into your browser.
       link_text: Reset your password
     sent_from: Sent from %{app}
