--- a/config/locales/user_mailer/en.yml
+++ b/config/locales/user_mailer/en.yml
@@ -7,8 +7,7 @@ en:
       help: >
         If you did not want to change your email address, please visit the %{app}
         %{help_link} or %{contact_link}.
-      intro: >
-        The email address for your %{app} account has been changed.
+      intro: The email address for your %{app} account has been changed.
     password_changed:
       help: >
         If you did not change your password, please visit the %{app}
@@ -25,9 +24,8 @@ en:
         If you did not request a new account or suspect an error, please visit
         the %{app} %{help_link} or %{contact_link}.
       intro: >
-        This email address is already associated with a %{app} account, so we can't use it to create a new account.
-        To sign in with your existing account, follow the link below. 
+        This email address is already associated with a %{app} account, so we can't use it to
+        create a new account. To sign in with your existing account, follow the link below. 
         If you are not trying to sign in with this email address, you can ignore this message.
       link_text: Go to %{app}
-      reset_password: >
-        If you can't remember your password, go to %{app} to reset it.
+      reset_password: If you can't remember your password, go to %{app} to reset it.
