--- a/config/locales/help_text/es.yml
+++ b/config/locales/help_text/es.yml
@@ -8,9 +8,7 @@ es:
       address: NOT TRANSLATED YET
       birthdate: NOT TRANSLATED YET
       email: NOT TRANSLATED YET
-      family_name: NOT TRANSLATED YET
-      given_name: NOT TRANSLATED YET
-      name: NOT TRANSLATED YET
+      full_name: NOT TRANSLATED YET
       phone: NOT TRANSLATED YET
       social_security_number: NOT TRANSLATED YET
 
