Add reset-pw page+route+controller, link partial
**Why**: We are reevaulating the LOA3 reset password flow, and requiring
users to either have their personal key upon reset or reverify their
pii during the reset flow

--- a/config/locales/headings/en.yml
+++ b/config/locales/headings/en.yml
@@ -13,7 +13,10 @@ en:
     passwords:
       change: Change your password
       confirm: Confirm your current password to continue
-      forgot: Forgot your password?
+      forgot:
+        basic: Forgot your password?
+        loa3: Confirm your email address
+      reset: Reset your password
     account:
       account_history: Account history
       login_info: Your account
