--- a/config/locales/instructions/en.yml
+++ b/config/locales/instructions/en.yml
@@ -20,15 +20,20 @@ en:
     forgot_password:
       close_window: You can close this browser window once you have reset your password.
     password:
-      forgot: >
-        Don’t know your password? Reset it after confirming your email address.
+      forgot:
+        basic: >
+          Don’t know your password? Reset it after confirming your email address.
+        loa3: Enter your email address to reset your password.
+      reset: >
+        We take extra steps to keep your personal information secure and private,
+        so resetting your password takes a little extra effort.
       help_text_header: Password safety tips
       help_text: >
         The longer and more unusual the password, the harder it is to guess. So avoid using common
         phrases. Also avoid repeating passwords from other online accounts such as banks, email and
         social media.
       info:
-        lead: > 
+        lead: >
           It must be at least %{min_length} characters long and not be a commonly used password.
           That's it!
       strength:
