Fix specs, add more xlations, redirect to account
**Why**: We redirect to account after a valid otp because we are getting
rid of the current account reactivation screen, and we need users to be
able to easily choose between recovering their account with a personal
key or by reverifying

--- a/config/locales/forms/en.yml
+++ b/config/locales/forms/en.yml
@@ -16,7 +16,7 @@ en:
     confirmation:
       show_hdr: Create a strong password
     email:
-      label: Email Address
+      label: Email
     passwords:
       edit:
         buttons:
