--- a/config/locales/forms/es.yml
+++ b/config/locales/forms/es.yml
@@ -15,6 +15,8 @@ es:
         update: Actualización
     confirmation:
       show_hdr: Crear una contraseña segura
+    email:
+      label: NOT TRANSLATED YET
     passwords:
       edit:
         buttons:
