--- a/config/locales/links/en.yml
+++ b/config/locales/links/en.yml
@@ -9,6 +9,9 @@ en:
     next: Next
     passwords:
       forgot: Forgot your password?
+      reset:
+        with_key: I have my key
+        without_key: I don't have my key
     phone_confirmation:
       auth_app_fallback_html: ' or %{link}.'
       fallback_to_sms_html: Send me a text message with the code instead
