Add controller/view/xlations/specs for recovery
**Why**: We are changing around our accout recovery flow to better match
the existing experience

--- a/config/locales/headings/es.yml
+++ b/config/locales/headings/es.yml
@@ -18,6 +18,7 @@ es:
       account_history: La historia de la cuenta
       login_info: Información de la cuenta
       profile_info: NOT TRANSLATED YET
+      reactivate: NOT TRANSLATED YET
       two_factor: Autenticación de dos factores
       verified_account: Cuenta verificada
     personal_key: Asegúrese de que siempre puede iniciar sesión
