--- a/config/locales/titles/es.yml
+++ b/config/locales/titles/es.yml
@@ -15,7 +15,7 @@ es:
       confirm: NOT TRANSLATED YET
       forgot: NOT TRANSLATED YET
     account: NOT TRANSLATED YET
-    reactivate_profile: NOT TRANSLATED YET
+    reactivate_account: NOT TRANSLATED YET
     personal_key: NOT TRANSLATED YET
     registrations:
       new: NOT TRANSLATED YET
