--- a/config/locales/headings/en.yml
+++ b/config/locales/headings/en.yml
@@ -18,6 +18,7 @@ en:
       account_history: Account history
       login_info: Your account
       profile_info: Profile information
+      reactivate: Reactivate your account
       two_factor: Two-factor authentication
       verified_account: Verified Account
     personal_key: Here is your personal key
