Use single link in account password reset partial
**Why**: We have a new page with two choices for reactivating an
account, so having two links on the /account page is redundant

--- a/config/locales/account/en.yml
+++ b/config/locales/account/en.yml
@@ -15,9 +15,7 @@ en:
       previous_address: Previous address
       reactivation:
         instructions: Your profile was recently deactivated due to a password reset.
-          You can use your personal key to reactivate your profile.
-        personal_key: Reactivate your profile with your personal key.
-        reverify: No personal key? Reverify all your information instead.
+        link: Reactivate your profile now.
       ssn: Social Security Number
       verification:
         instructions: Your account requires a secret code to be verified.
