Add controller/routes/view/specs for personal key
**Why**: When a user reactivates their account, the personal key
entry and re encryption of pii are being split out into separate steps

Add personal key form partial, new form, alert

**Why**: The personal key input form is separate from the rest
of the presentation. Required for the new personal key entry
form.  Added an excalaimation point in the alert notice to match
designs and other alert messages

Adds verify password class and emphemera

**Why**: We are splitting out the account reactivation flow, which
requires an additional controller, shared views, new tests and routes

Removes old account reactivation files

**Why**: The flow isn't the same and these files are uneeded

Spec updates, manage_reactivate to reactivate

**Why**: The old account reactivation code was removed, so we can safely
move manage_reactivate_account to reactivate_account

--- a/config/locales/forms/en.yml
+++ b/config/locales/forms/en.yml
@@ -22,11 +22,8 @@ en:
         labels:
           password: New password
       show: Show password
-    reactivate_profile:
-      instructions: Provide the information below to reactivate your account.
-      submit: Reactivate profile
-      title: Reactivate profile
     personal_key:
+      alternative: Don't have your personal key?
       title: Enter your personal key
       instructions: Please confirm you have a copy of your personal key by entering it below.
       confirmation_label: Personal key
