--- a/config/locales/links/es.yml
+++ b/config/locales/links/es.yml
@@ -20,6 +20,7 @@ es:
     privacy_policy: Privacidad y seguridad
     remove: NOT TRANSLATED YET
     resend: Enviar de nuevo
+    reverify: NOT TRANSLATED YET
     sign_in: Iniciar sesión
     sign_out: Cerrar sesión
     cancel: Cancelar
