--- a/config/locales/links/en.yml
+++ b/config/locales/links/en.yml
@@ -20,6 +20,7 @@ en:
     privacy_policy: Privacy & security
     remove: Remove
     resend: Resend email
+    reverify: Please verify your identity again.
     sign_in: Sign in
     sign_out: Sign out
     cancel: Cancel
