--- a/config/locales/notices/en.yml
+++ b/config/locales/notices/en.yml
@@ -1,6 +1,7 @@
 ---
 en:
   notices:
+    account_recovery: Great! You have your personal key.
     dap_html: >
       <!-- We participate in the US government’s analytics program. -->
       <!-- See the data at analytics.usa.gov. -->
@@ -24,7 +25,7 @@ en:
         continue: Keep me signed in
         sign_out: Sign me out
         message_html: >
-          For your security, we will sign you out in %{time_left_in_session} unless 
+          For your security, we will sign you out in %{time_left_in_session} unless
           you tell us otherwise.
       partially_signed_in:
         continue: Continue signing in
