--- a/config/locales/links/es.yml
+++ b/config/locales/links/es.yml
@@ -17,7 +17,7 @@ es:
       auth_app_fallback_html: NOT TRANSLATED YET
       fallback_to_sms_html: Envíame un mensaje de texto con el código en su lugar
       fallback_to_voice_html: Llámame con el código en su lugar
-    privacy_policy: Política de privacidad
+    privacy_policy: Privacidad y seguridad
     remove: NOT TRANSLATED YET
     resend: Enviar de nuevo
     sign_in: Iniciar sesión
