Add reactivation warning modal, fallback, specs
**Why**: The user should know that they must reactivate their account
following a password reset. Using a modal to provide 'heads up'
information matches our current UX. A fallback alert message is also
provided when JS is disabled

Spec changes

**Why**: Satisfy PR feedback

Removes manual otp code entry

**Why**: Only one of the specs in
`password_recovery_via_recovery_code_spec.rb` needs to go through the
otp code entry page

Un-nest personal key verification bail out form

**Why**: Having a form nested in a form is bad.

Add cancel link to no pkey warning modal

**Why**: User should have the option to cancel the modal and verify
their personal key once they are warned that lack of said key will
require identity reverification

Add specs for modal cancel and pkey verify cancel

**Why**: We should have confidence that a user attempting to close the
reverify warning modal or electing to reverify their info once on the
personal key verification page can do so

--- a/config/locales/instructions/en.yml
+++ b/config/locales/instructions/en.yml
@@ -26,6 +26,9 @@ en:
         intro: >
           We take extra steps to keep your personal information secure and private,
           so resetting your password takes a little extra effort.
+        modal:
+          copy: If you don't have your personal key, you will need to verify your identity again.
+          heading: Don't have your personal key?
         with_key: Do you have your personal key?
     forgot_password:
       close_window: You can close this browser window once you have reset your password.
