--- a/config/locales/sign_up/es.yml
+++ b/config/locales/sign_up/es.yml
@@ -8,6 +8,7 @@
         modal_header: NOT TRANSLATED YET
         warning_header: NOT TRANSLATED YET
         success: NOT TRANSLATED YET
-        warning_points: NOT TRANSLATED YET
+        warning_points: 
+          - NOT TRANSLATED YET
       registrations:
         create_account: Empezar
