--- a/config/locales/user_mailer/en.yml
+++ b/config/locales/user_mailer/en.yml
@@ -12,7 +12,7 @@ en:
       help: >
         If you did not make this change, please visit the %{app}
         %{help_link} or %{contact_link}.
-      intro: The password for your %{app} account has been changed.
+      intro: You have a new password for your %{app} account.
     phone_changed:
       help: >
         If you did not want to change your phone number, please visit the %{app} %{help_link}
