--- a/config/locales/idv/fr.yml
+++ b/config/locales/idv/fr.yml
@@ -131,6 +131,7 @@ fr:
         d'aide pour accéder à nos services.
       help_center: Visitez notre Centre d'aide pour en apprendre davantage sur la
         façon dont nous vérifions votre compte.
+      loading: NOT TRANSLATED YET
       mail_sent: Votre lettre est en route
       personal_details_verified: Information personnelle vérifiée!
       personal_key: Il s'agit de votre nouvelle clé personnelle. Notez-la et conservez-la
@@ -180,6 +181,7 @@ fr:
           vous ne pourrez pas y accéder. Consultez notre Centre d'aide pour plus d'information
           sur la vérification de votre identité.
         heading: Nous ne trouvons pas de données qui correspondent à vos données financières.
+        timeout: NOT TRANSLATED YET
         warning: Veuillez vérifier l'information que vous avez fournie.
       phone:
         fail: Votre compte est strongverrouillé pour 24 heures/strong au cours desquelles
@@ -187,12 +189,14 @@ fr:
           sur la vérification de votre identité.
         heading: Nous ne trouvons pas de données qui correspondent à vos informations
           téléphoniques.
+        timeout: NOT TRANSLATED YET
         warning: Veuillez vérifier l'information que vous avez fournie.
       sessions:
         fail: Votre compte est strongverrouillé pour 24 heures/strong au cours desquelles
           vous ne pourrez pas y accéder.
         heading: Nous ne trouvons pas de données qui correspondent à vos informations
           téléphoniques.
+        timeout: NOT TRANSLATED YET
         warning: Veuillez vérifier l'information que vous avez fournie. Un numéro
           de sécurité sociale, un code ZIP ou une date de naissance mal écrits sont
           des erreurs communes.
